--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 
   <!-- ############# ----TEST----- ###################### -->
-  <link href='../packages/core/main.css' rel='stylesheet' />
-  <link href='../packages/daygrid/main.css' rel='stylesheet' />
-  <link href='../packages/timegrid/main.css' rel='stylesheet' />
-  <link href='../packages/list/main.css' rel='stylesheet' />
-  <script src='../packages/core/main.js'></script>
-  <script src='../packages/interaction/main.js'></script>
-  <script src='../packages/daygrid/main.js'></script>
-  <script src='../packages/timegrid/main.js'></script>
-  <script src='../packages/list/main.js'></script>
+  <link href='./packages/core/main.css' rel='stylesheet' />
+  <link href='./packages/daygrid/main.css' rel='stylesheet' />
+  <link href='./packages/timegrid/main.css' rel='stylesheet' />
+  <link href='./packages/list/main.css' rel='stylesheet' />
+  <script src='./packages/core/main.js'></script>
+  <script src='./packages/interaction/main.js'></script>
+  <script src='./packages/daygrid/main.js'></script>
+  <script src='./packages/timegrid/main.js'></script>
+  <script src='./packages/list/main.js'></script>
   <!-- #####################T ESTSTT ====================== -->
   <script src="./static/js/d3.min.js"></script>
   <script src="./static/js/crossfilter.min.js"></script>
